@@ -206,6 +206,7 @@ Localization
         #LOC_BDArmory_Settings_ResetHP = Reset Max HP of Parts
         #LOC_BDArmory_Settings_ResetArmor = Reset Armor of parts
         #LOC_BDArmory_Settings_ResetHull = Reset Material of parts
+        #LOC_BDArmory_Settings_RestoreKAL = Restore KAL
         #LOC_BDArmory_Settings_IntakeHack = Hack Intakes
         #LOC_BDArmory_Settings_PWingsHack = Pwing Edge Lift
         #LOC_BDArmory_Settings_PWingsThickHP = PWing Thickness Based Mass/HP
